--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next-auth/mongodb-adapter": "^1.1.1",
+    "mongodb": "^5.2.0",
     "next": "13.3.0",
     "next-auth": "^4.22.0",
     "react": "18.2.0",
